--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,12 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-  displayName: 'Run a multi-line script'
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # Write your PowerShell commands here.
+      
+      Write-Host "$(Build.Repository.LocalPath)"
+      Write-Host "$(Build.SourcesDirectory)"
+      Write-Host "$(System.DefaultWorkingDirectory)"
