--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ resources:
     name: 7Xws5239/111
     endpoint: 7Xws5239
 steps:
+- checkout: 111
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
