--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ resources:
     name: 7Xws5239/333
     endpoint: 7Xws5239
 steps:
+- checkout: none
 - checkout: 222
 - checkout: 333
 - task: PowerShell@2
