--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,12 @@ steps:
       def getfoldersname():
           folders = [f for f in os.listdir('.') if os.path.isdir(f)]
           return folders
-      print(getfoldersname())
+      #print each folder name
+      def printfoldersname():
+          for folder in getfoldersname():
+              print(folder)
+      
+      printfoldersname()
 # - task: PowerShell@2
 #   inputs:
 #     targetType: 'inline'
