--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,24 +14,33 @@ resources:
     name: 7Xws5239/333
     endpoint: 7Xws5239
 steps:
-- checkout: 222
 - checkout: 333
-- task: PythonScript@0
+- task: PowerShell@2
   inputs:
-    scriptSource: 'inline'
+    targetType: 'inline'
     script: |
-      import os
+      # Write your PowerShell commands here.
       
-      #get current sub folders name
-      def getfoldersname():
-          folders = [f for f in os.listdir('.') if os.path.isdir(f)]
-          return folders
-      #print each folder name
-      def printfoldersname():
-          for folder in getfoldersname():
-              print(folder)
+      Write-Host $(Build.Repository.Name)
+# - checkout: 222
+# - checkout: 333
+# - task: PythonScript@0
+#   inputs:
+#     scriptSource: 'inline'
+#     script: |
+#       import os
       
-      printfoldersname()
+#       #get current sub folders name
+#       def getfoldersname():
+#           folders = [f for f in os.listdir('.') if os.path.isdir(f)]
+#           return folders
+#       #print each folder name
+#       def printfoldersname():
+#           for folder in getfoldersname():
+#               print(folder)
+      
+#       printfoldersname()
+
 # - task: PowerShell@2
 #   inputs:
 #     targetType: 'inline'
